Add mr.raps.recommend and mr.raps.publish

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Imports:
     ggplot2,
     graphics,
     nortest,
-    rootSolve
+    rootSolve,
+    splines
 Depends:
     R (>= 2.10)
 License: GPL-3
