--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(mr.raps)
 export(mr.raps.all)
 export(mr.raps.overdispersed)
 export(mr.raps.overdispersed.robust)
+export(mr.raps.recommend)
 export(mr.raps.shrinkage)
 export(mr.raps.simple)
 export(mr.raps.simple.robust)
 export(posterior.mean)
+import(ggplot2)
 import(graphics)
 import(stats)
 importFrom(nortest,ad.test)
