--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(mr.raps.simple.robust)
 export(posterior.mean)
 import(ggplot2)
 import(graphics)
+import(gridExtra)
+import(splines)
 import(stats)
 importFrom(nortest,ad.test)
 importFrom(rootSolve,multiroot)
