--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 S3method(plot,mr.raps)
 S3method(print,mr.raps)
 export(fit.mixture.model)
+export(mr.raps)
 export(mr.raps.overdispersed)
 export(mr.raps.overdispersed.robust)
-export(mr.raps.recommend)
 export(mr.raps.shrinkage)
 export(mr.raps.simple)
 export(mr.raps.simple.robust)
