--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ S3method(plot,mr.raps)
 S3method(print,mr.raps)
 export(fit.mixture.model)
 export(mr.raps)
+export(mr.raps.mle)
+export(mr.raps.mle.all)
 export(mr.raps.overdispersed)
 export(mr.raps.overdispersed.robust)
 export(mr.raps.shrinkage)
 export(mr.raps.simple)
 export(mr.raps.simple.robust)
-export(mr.raps.v1)
-export(mr.raps.v1.all)
 export(posterior.mean)
 import(ggplot2)
 import(graphics)
