--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,16 @@ export(mr.raps.mle)
 export(mr.raps.mle.all)
 export(mr.raps.overdispersed)
 export(mr.raps.overdispersed.robust)
+export(mr.raps.scatterplot)
 export(mr.raps.shrinkage)
 export(mr.raps.simple)
 export(mr.raps.simple.robust)
 export(posterior.mean)
 import(ggplot2)
+import(ggrepel)
 import(graphics)
 import(gridExtra)
+import(rsnps)
 import(splines)
 import(stats)
 importFrom(nortest,ad.test)
