--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,11 @@
 
 S3method(plot,mr.raps)
 S3method(print,mr.raps)
+export(calCor)
 export(fit.mixture.model)
+export(getInput)
+export(grappleRobustEst)
+export(harmonise_data)
 export(modal.plot)
 export(mr.raps)
 export(mr.raps.mle)
@@ -18,6 +22,7 @@ import(ggplot2)
 import(ggrepel)
 import(graphics)
 import(gridExtra)
+import(nortest)
 import(rsnps)
 import(splines)
 import(stats)
