--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
     stats
 Suggests:
     bumphunter,
+    TxDb.Hsapiens.UCSC.hg38.knownGene
 Remotes:
     ropensci/rsnps
 Encoding: UTF-8
